--- a/minimal-api/appsettings.json
+++ b/minimal-api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
-  }
+    "mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=2131;"
+  },
+  "Jwt": "minimal-api-aluno"
 }
